# voime

./: .gitignore  CONFIG.md  Cargo.toml  README.md  note.md
resource/: log.csv  log2.csv
src/: main.rs
