[package]
name = "voime"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = "0.15.1"
hound = "3.5.1"
fcitx5-dbus = "0.1.4"
cpal = {version="0.17.1", features = ["jack"]}
# wayland-client = "0.31.11"
# wayland-protocols-misc = "0.3.9"
enigo = {version = "0.6.1", features = ["wayland"]}
uinput = "0.1.3"
arboard = "3.6.1"
